b=203937 an extra "print." is added to printing preference name r=kaie sr=jag a=sspitzer patch from and checking in for Roland.Mainz